--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,66 @@
+# APP_NAME=Laravel
+# APP_ENV=local
+# APP_KEY=
+# APP_DEBUG=true
+# APP_URL=http://localhost
+
+# LOG_CHANNEL=stack
+# LOG_DEPRECATIONS_CHANNEL=null
+# LOG_LEVEL=debug
+
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel
+# DB_USERNAME=root
+# DB_PASSWORD=
+
+# BROADCAST_DRIVER=log
+# CACHE_DRIVER=file
+# FILESYSTEM_DISK=local
+# QUEUE_CONNECTION=sync
+# SESSION_DRIVER=file
+# SESSION_LIFETIME=120
+
+# MEMCACHED_HOST=127.0.0.1
+
+# REDIS_HOST=127.0.0.1
+# REDIS_PASSWORD=null
+# REDIS_PORT=6379
+
+# MAIL_MAILER=smtp
+# MAIL_HOST=mailpit
+# MAIL_PORT=1025
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS="hello@example.com"
+# MAIL_FROM_NAME="${APP_NAME}"
+
+# AWS_ACCESS_KEY_ID=
+# AWS_SECRET_ACCESS_KEY=
+# AWS_DEFAULT_REGION=us-east-1
+# AWS_BUCKET=
+# AWS_USE_PATH_STYLE_ENDPOINT=false
+
+# PUSHER_APP_ID=
+# PUSHER_APP_KEY=
+# PUSHER_APP_SECRET=
+# PUSHER_HOST=
+# PUSHER_PORT=443
+# PUSHER_SCHEME=https
+# PUSHER_APP_CLUSTER=mt1
+
+# VITE_APP_NAME="${APP_NAME}"
+# VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+# VITE_PUSHER_HOST="${PUSHER_HOST}"
+# VITE_PUSHER_PORT="${PUSHER_PORT}"
+# VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+# VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:N2TR1I+mrs3y9nv+5Z0kvP4VckVa+wgD+l8aBguf30k=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +71,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laravel-webapp1
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -28,14 +88,21 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# MAIL_HOST=mailpit.gmail.com
+# MAIL_PORT=587
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=465
+
+
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=d688cd3234ab67
+MAIL_PASSWORD=b07e176ac851b1
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=21221753125@smkassalaambandung.sch.id
+MAIL_FROM_NAME="M. RIDWAN NURFAUZI H.P 21221753125 - SMK ASSALAAM"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
